@startuml

title __SHIP's Class Diagram__\n

  package com.cs2340.interstellarmerchant {
    package com.cs2340.interstellarmerchant.model.player {
      package com.cs2340.interstellarmerchant.model.player.ship {
        class Ship {
            + Ship()
            + getType()
            + setType()
        }
      }
    }
  }
  

  package com.cs2340.interstellarmerchant {
    package com.cs2340.interstellarmerchant.model.player {
      package com.cs2340.interstellarmerchant.model.player.ship {
        enum ShipType {
          FLEA
          GNAT
          FIREFLY
          MOSQUITO
          BUMBLEBEE
          BEETLE
          HORNET
          GRASSHOPPER
          TERMITE
          WASP
          cargoSpace
        }
      }
    }
  }
  

  Ship -up-|> Serializable
  Ship -up-|> Inventory
  Ship o-- ShipType : type


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
